fix: widen skyline layers to prevent parallax clipping at viewport edges

--- a/src/components/effects/NoirSkyline.module.css
+++ b/src/components/effects/NoirSkyline.module.css
@@ -25,10 +25,10 @@
 
 .layer {
   position: absolute;
-  left: 0;
-  right: 0;
+  left: -30px;
+  right: -30px;
   bottom: 0;
-  width: 100%;
+  width: calc(100% + 60px);
   height: 100%;
   transform-origin: 50% 100%; /* Scale up from bottom center */
   will-change: transform;
